--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Yarin Ashmoz - Portfolio</a>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Professional-Skills">Professional Skills</a></li>
-                <li class="nav-item"><a class="nav-link" href="#work-experience">Work Experience</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Online-Corses">Online Corses</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact-info">Contact</a></li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#Professional-Skills">Professional Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#work-experience">Work Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#Online-Corses">Online Courses</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact-info">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     
