--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             <h2 class="section-title"><b>Projects</b></h2>
             <div class="projects-gallery">
                 <div class="project-card">
+                    <h3><b>Task Manager</b></h3>
+                    <p>A project I made for testing.</p>
+                    <a href="https://yarin9ashmoz.github.io/ToDo-List/" class="btn btn-primary">View Project</a>
+                </div>
+                <div class="project-card">
                     <h3><b>iFood</b></h3>
                     <p>A project I made for one of my courses.</p>
                     <a href="https://yarin9ashmoz.github.io/iFood/" class="btn btn-primary">View Project</a>
