--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
             <h2 class="section-title"><b>Work Experience</b></h2>
             <div class="projects-gallery">
                 <div class="project-card" id="work-card">
+                    <h3><b>QA Tester – Camtek (Student position)</b></h3>
+                    <ul>
+                        <li><p>Responsible for software testing to ensure quality assurance and optimal functionality of software products.</p></li>
+                        <li><p>Identifying and documenting bugs, collaborating with development teams to resolve issues.</p></li>
+                        <li><p>Developing and executing test plans and scenarios to validate software performance and functionality.</p></li>
+                        <li>Contributing to continuous improvement initiatives and best practices in testing methodologies.</li>
+                    </ul>
+                </div>
+                <div class="project-card" id="work-card">
                     <h3><b>Officer (Captain), IDF</b></h3>
                     <p>Managed and planned a team of approximately 50 personnel in maintenance platoons.</p>
                     <p>Developed and provided personal training to approximately 50 professional soldiers and regular soldiers in platoons, including:</p>
