--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- Work Experience Section -->
         <section id="work-experience">
             <h2 class="section-title"><b>Work Experience</b></h2>
-            <div class="projects-gallery">
+            <div class="projects-gallery" id="work-experience-gallery">
                 <div class="project-card" id="work-card">
                     <h3><b>QA Tester – Camtek (Student position)</b></h3>
                     <ul>
